cabal-version:   2.4
name:            saberlc
version:         0.1.0.0
license:         MPL-2.0
license-file:    LICENSE
maintainer:      ryanbrew317@gmail.com
author:          Ryan Brewer
homepage:        ryanbrewer.dev
synopsis:        A simple lambda calculus compiler that targets SaberVM
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable saberlc
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Header
        Parser
        Typechecker

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        parsec ^>=3.1.16.1,
        containers ^>=0.6.7,
        binary ^>=0.8.9.1,
        bytestring ^>=0.11.5.3
